# gdr_gwcosmo_tutorial_2020

./: LICENSE  README.md  requirements.txt
gwcosmo/: .gitattributes  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  INSTALL.md  LICENSE.md  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py
gwcosmo.egg-info/: PKG-INFO  requires.txt  top_level.txt
gwcosmo/docs/: .gitignore  Makefile  conf.py  examples.txt  index.txt  installation.txt  method.txt  writing-documentation.txt
gwcosmo/docs/latex/: Makefile  gwcosmo_method.tex
gwcosmo/gwcosmo/: __init__.py  gwcosmo.py
gwcosmo/gwcosmo/data/: H1_O1_strain.txt  H1_O2_strain.txt  H1_O3_strain.txt  K1_O4high_strain.txt  K1_O4low_strain.txt  K1_O5_strain.txt  L1_O1_strain.txt  L1_O2_strain.txt  L1_O3_strain.txt  L1_O4high_strain.txt  L1_O4low_strain.txt  L1_O5_strain.txt  O3PSD_BBH-powerlaw_alpha_1.6_Mmin_5.0_Mmax_100.0_Nsamps20000_full_waveform.p  O3PSD_BNS_Nsamps20000_full_waveform.p  O3PSD_NSBH_Nsamps20000_full_waveform.p  PSD_L1_H1_mid.txt  README  V1_O2_strain.txt  V1_O3_strain.txt  V1_O4high_strain.txt  V1_O4low_strain.txt  V1_O5_strain.txt
gwcosmo/gwcosmo/likelihood/: __init__.py  detection_probability.py  posterior_samples.py  skymap.py
gwcosmo/gwcosmo/prior/: __init__.py  catalog.py  priors.py
gwcosmo/gwcosmo/utilities/: __init__.py  calc_kcor.py  gracedb.py  posterior_utilities.py  redshift_utilities.py  schechter_function.py  schechter_params.py  standard_cosmology.py
notebooks/: GW170817_GWTC-1.hdf5  Tutorial.ipynb  fast_script.sh
notebooks/.ipynb_checkpoints/: Tutorial-checkpoint.ipynb
notebooks/GW170817/: GW170817_counterpart.npz  (+1 more)
