[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = --doctest-modules

[aliases]
test=pytest

[coverage:run]
source = gwcosmo
omit =
    gwcosmo/tests/*
    gwcosmo/config/development.py
    gwcosmo/config/playground.py
    gwcosmo/config/production.py
    gwcosmo/config/test.py
parallel = True
concurrency =
    thread
    multiprocessing

[metadata]
name = gwcosmo
version = 0.0.2.dev
license = GPL-2+
author = Ignacio Magana Hernandez
author_email = ignacio.magana@ligo.org
description = A package to estimate cosmological parameters using gravitational-wave observations
long_description = A package to estimate cosmological parameters using gravitational-wave observations
url = https://git.ligo.org/cbc-cosmo/gwcosmo
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >= 3.5

[options.package_data]
gwcosmo = data/*.txt, data/*.p
